[package]
name = "hex_rgb_converter"
version = "1.0.0"
edition = "2021"
description = "Convert between RGB and hex color representations with a clean API."
license = "MIT"
repository = "https://github.com/DevYatsu/hex_rgb_converter"
documentation = "https://docs.rs/hex_rgb_converter"
keywords = ["color", "rgb", "hex", "converter", "colour"]
categories = ["parser-implementations", "encoding"]

[dependencies]
custom_error = "1.9.2"
