[package]
name = "hex_rgb_converter"
version = "1.0.1"
edition = "2021"
description = "Dead simple RGB ↔ hex color conversion."
license = "MIT"
repository = "https://github.com/DevYatsu/hex_rgb_converter"
documentation = "https://docs.rs/hex_rgb_converter"
keywords = ["color", "rgb", "hex", "converter", "colour"]
categories = ["parser-implementations", "encoding"]

[dependencies]
custom_error = "1.9.2"
